--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -5,8 +5,8 @@
       {% load tags %}
       <table cellpadding="3" cellspacing="1" width="100%">
           <tr>
-            <th>类型</th>
-            <th width="80px">订单编号</th>
+            <th width="80px">类型</th>
+            <th>订单编号</th>
             <th>收货时间</th>
             <th>收货人</th>
             <th>电话 | 会员</th>
@@ -35,7 +35,8 @@
 {% endfor %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="8"><a href="{{ request.pPath.地图 }}?k={{ i.logcs.address }}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
+            <td colspan="5"><a href="{{ request.pPath.地图 }}?k={{ i.logcs.address|urlencode }}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
+            <td align="center">{{ i.fee.paid|stringformat:"0.2f" }}</td>
           </tr>          
           <tr>
             <td align="center">备注</td>
