--- a/shop/static/shop/css/style.css
+++ b/shop/static/shop/css/style.css
@@ -4,7 +4,7 @@
 .scrollBox .d1{border:#E5E5E5 1px solid;overflow:hidden;width:930px;position:relative;height:auto;background:#000000;}
 .scrollBox .loading{display:block;float:left;border:#666666 0px solid;font-weight:bold;font-size:12px;width:930px;color:#ffcc00;padding-top:30px;font-family:verdana, arial, helvetica, sans-serif;height:210px;background:#000000;text-align:center;}
 .scrollBox .d2{overflow:hidden;width:100%;height:240px;z-index:898;}
-.scrollBox .num_list{padding:0 4px;font-size:12px;left:0px;overflow:hidden;width:100%;color:#FFFFFF;bottom:-1px;position:absolute;height:20px;background:#FFFFFF;}
+.scrollBox .num_list{padding:4px 0;font-size:12px;left:0px;overflow:hidden;width:100%;color:#FFFFFF;bottom:-1px;position:absolute;height:20px;background:#FFFFFF;opacity: 0.1;}
 .scrollBox .num_list span{display:inline-block;padding-left:6px;height:16px;}
 .scrollBox .button{font-weight:bold;font-size:13px;z-index:898;right:0px;bottom:2px;font-family:arial, helvetica, sans-serif;position:absolute;}
 .scrollBox .bs1{display:block;float:left;padding:2px 6px;cursor:pointer;color:#FFFFFF;text-decoration:none;margin-right:3px;background:#666666;}
