增加 票据打印
修正少许bug


Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -142,7 +142,7 @@
           <li><a href="{{ request.pPath.新订单 }}">新订单</a></li>
           <li><a href="{{ request.pPath.地图 }}">地图</a></li>
           <li><a href="{{ request.pPath.物流安排 }}?c=-1">物流安排</a></li>
-          <li><a href="{{ request.pPath.打印订单 }}">打印订单</a></li>
+          <li><a href="{{ request.pPath.票据打印 }}">票据打印</a></li>
         </ul>
         <span id="adminName">{{ request.user.username }} [ {% if request.user.is_superuser %}超级管理员{% else %}普通管理{% endif %} ]</span>
     </div>
