修正bug: - 后台新订单 ie 中 ajax 物流信息乱码问题
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/shop/static/shop/css/base.css
+++ b/shop/static/shop/css/base.css
@@ -5,7 +5,7 @@ select,input,img,th{vertical-align:middle}
 select{height:28px;line-height:24px;border:solid 1px #CFCACA;}
 img{border:0 none;}
 ul,ol,li,dl,dt,dd{list-style-type:none}
-a{color:#4e78b5;text-decoration:none}
+a{color:#4e78b5;text-decoration:none;cursor: pointer;}
 a:hover{color:#345db5;text-decoration:none}
 a.a_bg:hover{background:#EFF3FB;text-decoration:none}
 a:focus,input[type=button],input[type=submit],button{outline:none}
