--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <title>{% block title %}{{ request.domElement.get_path_display }}{% endblock %} - new31管理中心</title>
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
