--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>{% block title %}{{ title }}{% endblock %} 31客 - 源自欧洲经典口味！</title>
+    <title>{% block title %}{{ title }}{% endblock %}{% url 'getItemPin' %} 31客 - 源自欧洲经典口味！</title>
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
     {% block meta %}{% endblock %}
